# platform.upstream.libgsignon-glib

./: .gitignore  AUTHORS  ChangeLog  Makefile.am  Makefile.in  NEWS  README  aclocal.m4  autogen.sh  config.h.in  configure  configure.ac  libgsignon-glib.pc.in  project.config
dists/debian/: README.Debian  changelog  control  copyright  install  libgsignon-glib-dev.install  libgsignon-glib-doc.install  postinst  postrm  preinst  prerm  rules
dists/rpm/: libgsignon-glib-suse.spec  libgsignon-glib-tizen.changes  libgsignon-glib-tizen.spec
docs/: Makefile.in
docs/reference/: Makefile.am  Makefile.in  examples.xml  introduction.xml  libgsignon-glib-docs.xml  libgsignon-glib-sections.txt  libgsignon-glib.types
docs/reference/html/: SignonAuthService.html  SignonAuthSession.html  SignonIdentity.html  SignonIdentityInfo.html  SignonSecurityContext.html  annotation-glossary.html  api-index-1-8.html  api-index-deprecated.html  api-index-full.html  appendices.html  credential-management.html  gsso-examples.html  gsso-intro.html  index.html  index.sgml  libgsignon-glib-SignonError.html  libgsignon-glib-objects.html  libgsignon-glib-overview.html  libgsignon-glib.devhelp2  object-tree.html
examples/: Makefile.am  Makefile.in  gsso-example.c
libgsignon-glib/: Makefile.am  Makefile.in  signon-auth-service.c  signon-auth-service.h  signon-auth-session.c  signon-auth-session.h  signon-dbus-queue.c  signon-dbus-queue.h  signon-enum-types.h  signon-errors.c  signon-errors.h  signon-glib.h  signon-identity-info.c  signon-identity-info.h  signon-identity.c  signon-identity.h  signon-internals.h  signon-security-context.c  signon-security-context.h  signon-types.h  signon-utils.c  signon-utils.h  signon.vapi  sso-auth-service.c  sso-auth-service.h
libgsignon-glib/interfaces/: com.google.code.AccountsSSO.gSingleSignOn.Identity.xml
libsignon-glib/: Makefile.am  signon-auth-service.c  signon-auth-service.h  signon-auth-session.c  signon-auth-session.h  signon-errors.c  signon-identity-info.c  signon-identity-info.h  signon-identity.c  signon-identity.h  signon-internals.h  signon-security-context.c  signon-security-context.h  signon-utils.c  signon-utils.h  sso-auth-service.c
libsignon-glib/interfaces/: com.google.code.AccountsSSO.SingleSignOn.AuthService.xml  com.google.code.AccountsSSO.SingleSignOn.AuthSession.xml  com.google.code.AccountsSSO.SingleSignOn.Identity.xml  com.google.code.AccountsSSO.gSingleSignOn.AuthService.xml  com.google.code.AccountsSSO.gSingleSignOn.AuthSession.xml
packaging/: libgsignon-glib-suse.spec  libgsignon-glib-tizen.spec  libgsignon-glib.changes  libgsignon-glib.spec  libsignon-glib.spec
pygobject/: Makefile.in
tests/: Makefile.am  Makefile.in  check_signon.c  signon-glib-test.sh  tests.xml  valgrind.supp  valgrind_common.mk
tools/: archive.sh  prepare-tizen.sh
widl/: signon.widl
